force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Additional_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Additional_Filter_Logic__c</fullName>
    <description>Optional SOQL WHERE clause fragment for advanced filtering.</description>
    <inlineHelpText>Advanced: Add custom SOQL conditions (e.g., Priority = 'Low').</inlineHelpText>
    <label>Additional Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>