force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Child_Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Filter_Field__c</fullName>
    <description>API name of the field on the child object to evaluate. Enter the field name only, without the object prefix. Correct: UJET__Fail_Reason__c. Incorrect: UJET__UJET_Session__c.UJET__Fail_Reason__c.</description>
    <inlineHelpText>Field API name only. Do not use dot notation. (Example: UJET__Status__c).</inlineHelpText>
    <label>Child Filter Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>