force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Child_Filter_Operator__c.field-meta.xml
<CustomField>
    <fullName>Child_Filter_Operator__c</fullName>
    <description>Operator to use when comparing child filter field to value.</description>
    <inlineHelpText>Select how to compare the child field value.</inlineHelpText>
    <label>Child Filter Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Not Equals</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Is Null</fullName>
            </value>
            <value>
                <fullName>Is Not Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>