force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Child_Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Child_Filter_Value__c</fullName>
    <description>Raw value(s) to match on the child filter field. Do not wrap in quotes. Use semicolons to separate multiple values. Example: eu_abandoned or Finished;Completed.</description>
    <inlineHelpText>Raw values only. Do not wrap in quotes. Separate multiple values with semicolons. (Example: Finished;Completed).</inlineHelpText>
    <label>Child Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>