force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Child_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Lookup_Field__c</fullName>
    <description>API name of the lookup field on the child object that references the Case (e.g., UJET__Case__c or CaseId).</description>
    <inlineHelpText>Enter the API name of the lookup field on the child object that links to Case.</inlineHelpText>
    <label>Child Lookup Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>