force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Child_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_API_Name__c</fullName>
    <description>API name of the child object to check for criteria (e.g., UJET__UJET_Session__c). Leave blank if no child record criteria is needed.</description>
    <inlineHelpText>Enter the API name of the child object related to Case (e.g., UJET__UJET_Session__c).</inlineHelpText>
    <label>Child Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>