force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <description>Minimum days since last activity on the Case. Leave blank to ignore.</description>
    <inlineHelpText>Cases must not have had any activity for at least this many days.</inlineHelpText>
    <label>Days Since Last Activity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>