force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Days_Since_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Modified__c</fullName>
    <description>Minimum days since Case was last modified. Leave blank to ignore.</description>
    <inlineHelpText>Cases must not have been modified for at least this many days.</inlineHelpText>
    <label>Days Since Last Modified</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>