force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of what this rule does.</description>
    <inlineHelpText>Describe the purpose and behavior of this rule.</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>