force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Exclude_Origins__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Origins__c</fullName>
    <description>Semicolon-separated list of Case Origins to exclude. Cases with these origins will NOT match this rule. Example: IVR Call;Web</description>
    <inlineHelpText>Enter one or more Case Origin values separated by semicolons. The rule will NOT match Cases with any of these origins. Leave blank to allow all origins.</inlineHelpText>
    <label>Exclude Origins</label>
    <length>255</length>
    <type>Text</type>
</CustomField>