force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Exclude_Owner_Name_Like__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Owner_Name_Like__c</fullName>
    <description>Pattern to exclude Owner Names using LIKE operator. Supports % as wildcard. Cases owned by matching users will NOT match this rule. Example: %Integration% excludes integration users.</description>
    <inlineHelpText>Enter a pattern to exclude Case Owners. Use % as wildcard. Example: %Bot% excludes any owner name containing Bot.</inlineHelpText>
    <label>Exclude Owner Name Like</label>
    <length>255</length>
    <type>Text</type>
</CustomField>