force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Exclude_Record_Type_Developer_Names__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Record_Type_Developer_Names__c</fullName>
    <description>Semicolon-separated RecordType DeveloperNames to exclude from this rule.</description>
    <inlineHelpText>Exclude specific record types from this rule.</inlineHelpText>
    <label>Exclude Record Type Developer Names</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>