force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Last_Modified_By_Name_Like__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Name_Like__c</fullName>
    <description>Optional LIKE pattern to restrict this rule by Last Modified By Name. Leave blank to apply to all. Use % as multi-character wildcard and _ as single-character wildcard.</description>
    <inlineHelpText>Leave blank to match all. Use % as wildcard. (Example: %Google%).</inlineHelpText>
    <label>Last Modified By Name Like</label>
    <length>255</length>
    <type>Text</type>
</CustomField>