force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Origins__c.field-meta.xml
<CustomField>
    <fullName>Origins__c</fullName>
    <description>Semicolon-separated list of Case Origins to match. Leave blank to match all origins. Example: IVR Call;Web;Email</description>
    <inlineHelpText>Enter one or more Case Origin values separated by semicolons. The rule will only match Cases with one of these origins. Leave blank to match all origins.</inlineHelpText>
    <label>Origins</label>
    <length>255</length>
    <type>Text</type>
</CustomField>