force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Owner_Name_Like__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name_Like__c</fullName>
    <description>Optional LIKE pattern to restrict this rule by Case Owner Name. Leave blank to apply to all owners. Use % as multi-character wildcard and _ as single-character wildcard.</description>
    <inlineHelpText>Leave blank to match all owners. Use % as wildcard. (Example: %Google%).</inlineHelpText>
    <label>Owner Name Like</label>
    <length>255</length>
    <type>Text</type>
</CustomField>