force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Record_Type_Developer_Names__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Names__c</fullName>
    <description>Semicolon-separated RecordType DeveloperNames to include. Blank means all record types.</description>
    <inlineHelpText>Limit this rule to specific record types. Leave blank to apply to all record types.</inlineHelpText>
    <label>Record Type Developer Names</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>