force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Require_Child_Record__c.field-meta.xml
<CustomField>
    <fullName>Require_Child_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Case must have at least one matching child record for this rule to apply. When unchecked, Cases without any child records will also match if other criteria are met.</description>
    <inlineHelpText>Check this if the Case must have at least one matching child record for the rule to apply.</inlineHelpText>
    <label>Require Child Record</label>
    <type>Checkbox</type>
</CustomField>