force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Source_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_Status__c</fullName>
    <description>Current Case Status value(s) to match. Supports semicolon-separated list for multiple values.</description>
    <inlineHelpText>Enter one or more status values separated by semicolons (e.g., Waiting on Customer;Pending Response).</inlineHelpText>
    <label>Source Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>