force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Stop_Processing__c.field-meta.xml
<CustomField>
    <fullName>Stop_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true and this rule matches, do not evaluate subsequent rules for this Case.</description>
    <inlineHelpText>When checked, no further rules will be evaluated for a Case after this rule matches.</inlineHelpText>
    <label>Stop Processing</label>
    <type>Checkbox</type>
</CustomField>