force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/fields/Target_Reason__c.field-meta.xml
<CustomField>
    <fullName>Target_Reason__c</fullName>
    <description>The reason value to set on the Case when this rule matches. Only used when Auto Close Reason is enabled in settings. Leave blank to skip setting a reason for this rule.</description>
    <inlineHelpText>The reason value to populate when this rule updates a Case. Leave blank to skip setting a reason for this rule.</inlineHelpText>
    <label>Target Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>