force-app/main/default/objects/util_closer_Case_Status_Rule__mdt/listViews/Active_Rules.listView-meta.xml
<ListView>
    <fullName>Active_Rules</fullName>
    <columns>MasterLabel</columns>
    <columns>Execution_Order__c</columns>
    <columns>Source_Status__c</columns>
    <columns>Target_Status__c</columns>
    <columns>Days_Since_Last_Modified__c</columns>
    <columns>Days_Since_Created__c</columns>
    <columns>Days_Since_Last_Activity__c</columns>
    <columns>Stop_Processing__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Rules</label>
</ListView>